feat: added shards and essences to model provider fix: -fixed typo in en_us.json -fixed wrong definition in AffinityRecipeProvider

--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -38,7 +38,7 @@
 
   "item.elementalrealms.affinity_stone_space": "Affinity Stone of Space",
   "item.elementalrealms.affinity_shard_space": "Shard of Space",
-  "item.elementalrealms.essene_space": "Essence of Space",
+  "item.elementalrealms.essence_space": "Essence of Space",
 
   "item.elementalrealms.affinity_stone_life": "Affinity Stone of Life",
   "item.elementalrealms.affinity_shard_life": "Shard of Life",
