--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -46,7 +46,7 @@
 
   "item.elementalrealms.affinity_stone_void": "Affinity Stone of Void",
 
-  "item.elementalrealms.portal_staff": "Portal Staff",
+  "item.elementalrealms.dimension_staff": "Dimension Staff",
 
 
   "itemGroup.elementalrealms.affinity_tab": "Affinity Items",
