--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -46,8 +46,12 @@
 
   "item.elementalrealms.affinity_stone_void": "Affinity Stone of Void",
 
+  "item.elementalrealms.dimension_staff": "Dimension Staff",
 
-  "itemGroup.elementalrealms.items_tab": "Magic Items",
+
+  "itemGroup.elementalrealms.affinity_tab": "Affinity Items",
+  "itemGroup.elementalrealms.block_tab": "Blocks",
+  "itemGroup.elementalrealms.item_tab": "Items",
 
   "elementalrealms.configuration.title": "Elemental Realms Configs",
   "elementalrealms.configuration.section.elementalrealms.common.toml": "Elemental Realms Configs",
