feat: added dimentional traveler advancement

--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -38,7 +38,9 @@
   "itemGroup.elementalrealms.block_tab": "Blocks",
   "itemGroup.elementalrealms.item_tab": "Items",
   "advancements.elementalrealms.root.title": "Elemental Realms",
-  "advancements.elementalrealms.root.description": "Defeat the Ender Dragon to break the barrier between dimensions.",
+  "advancements.elementalrealms.root.description": "Defeat the Ender Dragon to break the barrier between dimensions",
+  "advancements.elementalrealms.get_staff.title": "Dimentional Traveler",
+  "advancements.elementalrealms.get_staff.description": "Obtain a Dimension Staff",
   "elementalrealms.configuration.title": "Elemental Realms Configs",
   "elementalrealms.configuration.section.elementalrealms.common.toml": "Elemental Realms Configs",
   "elementalrealms.configuration.section.elementalrealms.common.toml.title": "Elemental Realms Configs",
