added tooltip and rarity to dimension staff

--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -28,12 +28,14 @@
   "item.elementalrealms.affinity_stone_life": "Affinity Stone of Life",
   "item.elementalrealms.affinity_stone_void": "Affinity Stone of Void",
   "item.elementalrealms.dimension_staff": "Dimension Staff",
+  "itemtooltip.elementalrealms.shift": "§e§oPress [Shift] for more information§r",
+  "itemtooltip.elementalrealms.dimension_staff.line1": "§7Creates portals to the §bTutorial Dimension§r",
+  "itemtooltip.elementalrealms.dimension_staff.line2": "§7A mystical realm for learning and practice§r",
   "itemGroup.elementalrealms.affinity_tab": "Affinity Items",
   "itemGroup.elementalrealms.block_tab": "Blocks",
   "itemGroup.elementalrealms.item_tab": "Items",
   "advancements.elementalrealms.root.title": "The Journey Begins...",
   "advancements.elementalrealms.root.description": "Defeat the Ender Dragon to break the barrier between dimensions",
-
   "advancements.elementalrealms.get_staff.title": "Dimentional Traveler",
   "advancements.elementalrealms.get_staff.description": "Obtain a Dimension Staff",
   "elementalrealms.configuration.title": "Elemental Realms Configs",
