added tooltips for affinity stones/shards/essences

--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -31,6 +31,34 @@
   "itemtooltip.elementalrealms.shift": "§e§oPress [Shift] for more information§r",
   "itemtooltip.elementalrealms.dimension_staff.line1": "§7Creates portals to the §bTutorial Dimension§r",
   "itemtooltip.elementalrealms.dimension_staff.line2": "§7A mystical realm for learning and practice§r",
+  "itemtooltip.elementalrealms.affinity_stone.fire": "§cHarness the power of flames and heat§r",
+  "itemtooltip.elementalrealms.affinity_stone.water": "§9Control the flow of water and tides§r",
+  "itemtooltip.elementalrealms.affinity_stone.earth": "§2Command the strength of stone and soil§r",
+  "itemtooltip.elementalrealms.affinity_stone.wind": "§fMaster the currents of air and storms§r",
+  "itemtooltip.elementalrealms.affinity_stone.lightning": "§eWield the fury of thunder and lightning§r",
+  "itemtooltip.elementalrealms.affinity_stone.ice": "§bFreeze your enemies with glacial cold§r",
+  "itemtooltip.elementalrealms.affinity_stone.gravity": "§5Bend the forces of gravity itself§r",
+  "itemtooltip.elementalrealms.affinity_stone.sound": "§dManipulate vibrations and sonic waves§r",
+  "itemtooltip.elementalrealms.affinity_stone.time": "§6Alter the flow of time around you§r",
+  "itemtooltip.elementalrealms.affinity_stone.space": "§3Warp reality and traverse dimensions§r",
+  "itemtooltip.elementalrealms.affinity_stone.life": "§aChannel the essence of life and growth§r",
+  "itemtooltip.elementalrealms.affinity_stone.void": "§8Embrace the emptiness of the void§r",
+  "itemtooltip.elementalrealms.affinity_essence.fire": "§cPure essence of elemental flame§r",
+  "itemtooltip.elementalrealms.affinity_essence.water": "§9Pure essence of flowing water§r",
+  "itemtooltip.elementalrealms.affinity_essence.earth": "§2Pure essence of solid earth§r",
+  "itemtooltip.elementalrealms.affinity_essence.wind": "§fPure essence of wild winds§r",
+  "itemtooltip.elementalrealms.affinity_essence.lightning": "§ePure essence of crackling lightning§r",
+  "itemtooltip.elementalrealms.affinity_essence.ice": "§bPure essence of eternal frost§r",
+  "itemtooltip.elementalrealms.affinity_essence.gravity": "§5Pure essence of gravitational force§r",
+  "itemtooltip.elementalrealms.affinity_essence.sound": "§dPure essence of resonating sound§r",
+  "itemtooltip.elementalrealms.affinity_shard.fire": "§cA crystallized fragment of fire§r",
+  "itemtooltip.elementalrealms.affinity_shard.water": "§9A crystallized fragment of water§r",
+  "itemtooltip.elementalrealms.affinity_shard.earth": "§2A crystallized fragment of earth§r",
+  "itemtooltip.elementalrealms.affinity_shard.wind": "§fA crystallized fragment of wind§r",
+  "itemtooltip.elementalrealms.affinity_shard.lightning": "§eA crystallized fragment of lightning§r",
+  "itemtooltip.elementalrealms.affinity_shard.ice": "§bA crystallized fragment of ice§r",
+  "itemtooltip.elementalrealms.affinity_shard.gravity": "§5A crystallized fragment of gravity§r",
+  "itemtooltip.elementalrealms.affinity_shard.sound": "§dA crystallized fragment of sound§r",
   "itemGroup.elementalrealms.affinity_tab": "Affinity Items",
   "itemGroup.elementalrealms.block_tab": "Blocks",
   "itemGroup.elementalrealms.item_tab": "Items",
