feat: added custom tooltips and rarities to affinity stones

--- a/src/main/resources/assets/elementalrealms/lang/en_us.json
+++ b/src/main/resources/assets/elementalrealms/lang/en_us.json
@@ -28,49 +28,34 @@
   "item.elementalrealms.affinity_stone_life": "Affinity Stone of Life",
   "item.elementalrealms.affinity_stone_void": "Affinity Stone of Void",
   "item.elementalrealms.dimension_staff": "Dimension Staff",
-  "itemtooltip.elementalrealms.shift": "§e§oPress [Shift] for more information§r",
-  "itemtooltip.elementalrealms.dimension_staff.line1": "§7Creates portals to the §bTutorial Dimension§r",
-  "itemtooltip.elementalrealms.dimension_staff.line2": "§7A mystical realm for learning and practice§r",
-  "itemtooltip.elementalrealms.affinity_stone.fire": "§cHarness the power of flames and heat§r",
-  "itemtooltip.elementalrealms.affinity_stone.water": "§9Control the flow of water and tides§r",
-  "itemtooltip.elementalrealms.affinity_stone.earth": "§2Command the strength of stone and soil§r",
-  "itemtooltip.elementalrealms.affinity_stone.wind": "§fMaster the currents of air and storms§r",
-  "itemtooltip.elementalrealms.affinity_stone.lightning": "§eWield the fury of thunder and lightning§r",
-  "itemtooltip.elementalrealms.affinity_stone.ice": "§bFreeze your enemies with glacial cold§r",
-  "itemtooltip.elementalrealms.affinity_stone.gravity": "§5Bend the forces of gravity itself§r",
-  "itemtooltip.elementalrealms.affinity_stone.sound": "§dManipulate vibrations and sonic waves§r",
-  "itemtooltip.elementalrealms.affinity_stone.time": "§6Alter the flow of time around you§r",
-  "itemtooltip.elementalrealms.affinity_stone.space": "§3Warp reality and traverse dimensions§r",
-  "itemtooltip.elementalrealms.affinity_stone.life": "§aChannel the essence of life and growth§r",
-  "itemtooltip.elementalrealms.affinity_stone.void": "§8Embrace the emptiness of the void§r",
-  "itemtooltip.elementalrealms.affinity_essence.fire": "§cPure essence of elemental flame§r",
-  "itemtooltip.elementalrealms.affinity_essence.water": "§9Pure essence of flowing water§r",
-  "itemtooltip.elementalrealms.affinity_essence.earth": "§2Pure essence of solid earth§r",
-  "itemtooltip.elementalrealms.affinity_essence.wind": "§fPure essence of wild winds§r",
-  "itemtooltip.elementalrealms.affinity_essence.lightning": "§ePure essence of crackling lightning§r",
-  "itemtooltip.elementalrealms.affinity_essence.ice": "§bPure essence of eternal frost§r",
-  "itemtooltip.elementalrealms.affinity_essence.gravity": "§5Pure essence of gravitational force§r",
-  "itemtooltip.elementalrealms.affinity_essence.sound": "§dPure essence of resonating sound§r",
-  "itemtooltip.elementalrealms.affinity_shard.fire": "§cA crystallized fragment of fire§r",
-  "itemtooltip.elementalrealms.affinity_shard.water": "§9A crystallized fragment of water§r",
-  "itemtooltip.elementalrealms.affinity_shard.earth": "§2A crystallized fragment of earth§r",
-  "itemtooltip.elementalrealms.affinity_shard.wind": "§fA crystallized fragment of wind§r",
-  "itemtooltip.elementalrealms.affinity_shard.lightning": "§eA crystallized fragment of lightning§r",
-  "itemtooltip.elementalrealms.affinity_shard.ice": "§bA crystallized fragment of ice§r",
-  "itemtooltip.elementalrealms.affinity_shard.gravity": "§5A crystallized fragment of gravity§r",
-  "itemtooltip.elementalrealms.affinity_shard.sound": "§dA crystallized fragment of sound§r",
+  "itemtooltip.elementalrealms.shift": "§7Hold §e[Shift]§7 for details",
+
+  "itemtooltip.elementalrealms.dimension_staff.line1": "§7Opens portals to the §bSchool Dimension",
+  "itemtooltip.elementalrealms.dimension_staff.line2": "§7Right-click to create a dimensional gateway",
+
+  "itemtooltip.elementalrealms.affinity_stone.fire": "§6Grants mastery over fire and heat",
+  "itemtooltip.elementalrealms.affinity_stone.water": "§9Grants mastery over water and liquids",
+  "itemtooltip.elementalrealms.affinity_stone.earth": "§2Grants mastery over earth and minerals",
+  "itemtooltip.elementalrealms.affinity_stone.wind": "§fGrants mastery over wind and air",
+  "itemtooltip.elementalrealms.affinity_stone.lightning": "§eGrants mastery over electricity and storms",
+  "itemtooltip.elementalrealms.affinity_stone.ice": "§bGrants mastery over ice and cold",
+  "itemtooltip.elementalrealms.affinity_stone.gravity": "§5Grants mastery over gravitational forces",
+  "itemtooltip.elementalrealms.affinity_stone.sound": "§dGrants mastery over sound waves",
+  "itemtooltip.elementalrealms.affinity_stone.time": "§6Grants mastery over temporal manipulation",
+  "itemtooltip.elementalrealms.affinity_stone.space": "§3Grants mastery over spatial distortion",
+  "itemtooltip.elementalrealms.affinity_stone.life": "§aGrants mastery over life energy",
+  "itemtooltip.elementalrealms.affinity_stone.void": "§8Grants mastery over void energy",
+
   "itemGroup.elementalrealms.affinity_tab": "Affinity Items",
   "itemGroup.elementalrealms.block_tab": "Blocks",
   "itemGroup.elementalrealms.item_tab": "Items",
+
   "advancements.elementalrealms.root.title": "The Journey Begins...",
-  "advancements.elementalrealms.root.description": "Defeat the Ender Dragon to break the barrier between dimensions",
+  "advancements.elementalrealms.root.description": "Defeat the Ender Dragon to unlock dimensional travel",
   "advancements.elementalrealms.get_staff.title": "Dimentional Traveler",
   "advancements.elementalrealms.get_staff.description": "Obtain a Dimension Staff",
+
   "elementalrealms.configuration.title": "Elemental Realms Configs",
   "elementalrealms.configuration.section.elementalrealms.common.toml": "Elemental Realms Configs",
-  "elementalrealms.configuration.section.elementalrealms.common.toml.title": "Elemental Realms Configs",
-  "elementalrealms.configuration.items": "Item List",
-  "elementalrealms.configuration.logDirtBlock": "Log Dirt Block",
-  "elementalrealms.configuration.magicNumberIntroduction": "Magic Number Text",
-  "elementalrealms.configuration.magicNumber": "Magic Number"
+  "elementalrealms.configuration.section.elementalrealms.common.toml.title": "Elemental Realms Configs"
 }
